--- a/CDL_CUP.Rmd
+++ b/CDL_CUP.Rmd
@@ -22,7 +22,7 @@ library(igraph)
 library(readr)
 library(tidygraph)
 library(tidyverse)
-chord_df<- read_csv("C:/Users/thinshaw/Documents/CDL/CUP/bps2evt_chord.csv")
+chord_df<- read_csv("data/bps2evt_chord.csv")
 ```
 
 Home
@@ -34,7 +34,7 @@ Column {data-width=150}
 ### Map of the Central Upper Peninsula Assessment Area
 
 ```{r}
-knitr::include_graphics("C:/Users/thinshaw/Documents/CDL/CUP/CUP_Area.jpg")
+knitr::include_graphics("images/aoi.jpg")
 ```
 
 Column {data-width=150}
@@ -53,13 +53,13 @@ Column {data-width=150}
 ### Map of PreEuropean-Settlement Ecosystems
 
 ```{r}
-knitr::include_graphics("C:/Users/thinshaw/Documents/CDL/CUP/PreEuropeanSettlementEcosystems.jpg")
+knitr::include_graphics("images/bps.jpg")
 ```
 
 ### Map of Current Ecosystems
 
 ```{r}
-knitr::include_graphics("C:/Users/thinshaw/Documents/CDL/CUP/CurrentEcosystems.jpg")
+knitr::include_graphics("images/evt.jpg")
 ```
 
 Row {data-width=550}
@@ -83,9 +83,9 @@ groupColors <-c( "#1d4220", # conifer
                  "#56bf5f", # hardwood
                  "#397d3f", # hardwood-conifer 
                  "#7db7c7", # riparian 
-                 "#6e4f1e", # shrubland
                  "#f5e942", # cur ag
                  "#1d4220", # cur conifer
+                 "#397d3f", # cur hardwood-conifer
                  "#b0af9e", # developed
                  "#eb4034", # exotics
                  "#fc9d03", # grassland
@@ -119,7 +119,7 @@ Column {data-width=350}
 ### Biophysical Settings
 
 ```{r bps, fig.height = 5, fig.width = 10}
-bps_data <- read.csv("bps_aoi_attributes.csv")
+bps_data <- read.csv("data/bps_aoi_attributes.csv")
 
 # wrangle data
 bpsname <- bps_data %>%
@@ -152,7 +152,7 @@ Column {data-width=350}
 ### Existing Vegetation Types
 
 ```{r evt, fig.height = 5, fig.width = 10}
-evtname <- read.csv(file = "evt_aoi_attributes.csv") %>%
+evtname <- read.csv(file = "data/evt_aoi_attributes.csv") %>%
   group_by(EVT_NAME) %>%
   summarize(ACRES = sum(ACRES),
             REL_PERCENT = sum(REL_PERCENT)) %>%
@@ -183,7 +183,7 @@ Wildfire
 ### Historical Fire Regime
 
 ```{r}
-knitr::include_graphics("C:/Users/thinshaw/Documents/CDL/CUP/HistoricalFireRegime.jpg")
+knitr::include_graphics("images/mfri.jpg")
 ```
 
 About
